automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -636,7 +636,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -653,7 +653,7 @@
    ],
    "source": [
     "ice_cream_flavors = ['Mint Chocolate Chip', 'Coffee', 'Cookie Dough', 'Fudge Mint Brownie', 'Vanilla Bean']\n",
-    "for f in ice_cream_flavors:\n",
+    "for words in ice_cream_flavors:\n",
     "    print('I love ' + ice_cream_flavor + ' ice cream!!')"
    ]
   },
