--- a/index.ipynb
+++ b/index.ipynb
@@ -636,7 +636,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -652,8 +652,8 @@
     }
    ],
    "source": [
-    "ice_cream_flavors = ['Mint Chocolate Chip', 'Coffee', 'Cookie Dough', 'Fudge Mint Brownie', 'Vanilla Bean']\n",
-    "for ice_crea in ice_cream_flavors:\n",
+    "flavor = ['Mint Chocolate Chip', 'Coffee', 'Cookie Dough', 'Fudge Mint Brownie', 'Vanilla Bean']\n",
+    "for ice_cream in ice_cream_flavors:\n",
     "    print('I love ' + ice_cream_flavor + ' ice cream!!')"
    ]
   },
