automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -636,7 +636,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -652,8 +652,8 @@
     }
    ],
    "source": [
-    "flavors = ['Mint Chocolate Chip', 'Coffee', 'Cookie Dough', 'Fudge Mint Brownie', 'Vanilla Bean']\n",
-    "for flavors in flavor:\n",
+    "i_flavors = ['Mint Chocolate Chip', 'Coffee', 'Cookie Dough', 'Fudge Mint Brownie', 'Vanilla Bean']\n",
+    "for i_flavor in flavors:\n",
     "    print('I love ' + ice_cream_flavor + ' ice cream!!')"
    ]
   },
